--- a/admin/assets/src/scss/screens/_product.scss
+++ b/admin/assets/src/scss/screens/_product.scss
@@ -29,3 +29,7 @@ table.wp-list-table span.product-type.dgfw_gift:before {
 .dgfw-order-item-note {
     color: #888;
 }
+
+.show_if_has_giftable_variations_only {
+    display: none;
+}
